- Fixed sound events disabled when migrating to 5.17 release
- Fixed language not set at first start
- Fixed OPUS DTX mode sending too big packets when variable bitrate mode (VBR) was disabled
- Fixed ask to use default sounds pack at every language change (will be asked one last time)
- Fixed untranslated status message on file deletion
Android Client
- Added popup menu actions in Server List dialog
- Added "Message" and "User properties" user menu actions in channel list tab
- Ability to export each server in to a .tt file separately
- Nickname and Last Joined Channel are now stored in .tt file
- Broadcast messages, users logged in, and users logged out are now shown in the chat list
- Added the ability to send broadcast messages
- Ability to select/deselect user for move to other channel
- Simplified labels in User Properties dialog
- IP address, user ID and status message are now in "User Properties" dialog
- Added missing labels for sliders in audio codec configuration
- The labels in Main Window and User Properties dialog no longer have duplicate texts
- Minimum supported is now Android v8.1 (Oreo)
- WebRTC updated from r4332 to r6818
- OPUS updated to v1.5.2
iOS Client
- WebRTC updated from r4332 to r6818
- OPUS updated to v1.5.2
Server
-

Version 5.17, 2024/08/15
Default Qt Client
- "Connect to a Server" and "User Accounts" dialog simplified with multiple sub dialogs
- Redesigned "Sound Events" and "Shortcuts" tabs in "Preferences" dialog
- Table view instead of tree view in "Online Users", "User Accounts", "Banned Users", "Server List", "File List", "Server Properties" and "Preferences" dialogs
- Use Qt checkable flag in user rights list of "User Accounts" dialog to allow screenreader to see if an item is checked
- Fixed state of checkable items in "Preferences", "User Account", "Server properties" dialogs not announce by Voice Over on MacOS
- Fixed labels of edit fields in "Custom Video Format" dialog