@@ -30,6 +30,7 @@ Default Qt Client
 - Fixed ask to use default sounds pack at every language change (will be asked one last time)
 - Fixed untranslated status message on file deletion
 Android Client
+- Replaced turn up/down buttons for speaker volume, microphone gain and voice activation level with sliders
 - Added popup menu actions in Server List dialog
 - Added "Message" and "User properties" user menu actions in channel list tab
 - Ability to export each server in to a .tt file separately
